<resources>
    <string name="app_name">Kalkulator Amoeba</string>
    <string name="gambar_amoeba">Gambar amoeba</string>
    <string name="jumlah_awal_amoeba_hint">Jumlah awal amoeba</string>
    <string name="jumlah_pembelahan_amoeba_hint">Pembelahan amoeba / rentang waktu</string>
    <string name="rentang_waktu_hint">Rentang waktu membelah (menit)</string>
    <string name="jangka_waktu_hint">Jangka waktu (menit)</string>
    <string name="reset">Reset</string>
    <string name="message">%1$s diklik!</string>
    <string name="hitung">Hitung</string>
    <string name="jumlah_awal_amoeba_kosong">Jumlah awal amoeba harus diisi!</string>
    <string name="jumlah_pembelahan_amoeba_kosong">Jumlah pembelahan amoeba harus diisi!</string>
    <string name="rentang_waktu_membelah_kosong">Rentang waktu membelah harus diisi!</string>
    <string name="jangka_waktu_kosong">Jangka waktu harus diisi!</string>
    <string name="belum_ada_data">Belum ada data</string>
    <string name="amoeba_awal">Amoeba awal: %1$s</string>
    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data Amoeba otomatis</string>
    <string name="notif_title">Ada Amoeba baru!</string>
    <string name="notif_text">Cek sekarang biar nggak penasaran..</string>
    <string name="pembelahan_amoeba">Pembelahan amoeba: %1$s</string>
    <string name="rentang_waktu">Rentang waktu: %1$s</string>
    <string name="jangka_waktu">Jangka waktu: %1$s</string>
    <string name="hasil_amoeba">Hasil amoeba: %1$s</string>
    <string name="histori">Histori</string>
    <string name="about">Aplikasi kalkulator Amoeba adalah sebuah aplikasi kalkulator yang dikembangkan menggunakan bahasa pemrograman Kotlin dan ditujukan untuk perangkat mobile dengan sistem operasi Android.\n\n\n Assesment 2 \n\n6706213017 Muhammad Ghifari Firdaus</string>
    <string name="tentang_aplikasi">Tentang aplikasi</string>
    <string name="save_database">Aktifkan database</string>
    <string name="unsave_database">Nonaktifkan database</string>
    <string name="share_hasil">Share hasil</string>
    <string name="bagikan_template">Tahukah kalian?\nJumlah pembelahan amoeba yang awalnya terdapat %1$s buah amoeba, setelah melakukan pembelahan %2$s amoeba setiap %3$s menit selama %4$s menit, dapat menghasilkan %5$s buah amoeba lohh.</string>
    <string name="konfirmasi_hapus">Yakin Semua Histori akan Dihapus</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="koneksi_error">Koneksi Error</string>
</resources>