<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/utama"
    tools:context=".ui.hitung.HitungFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="32dp">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jumlah_awal_amoeba_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jumlah_awal_amoeba_inp"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/jumlah_awal_amoeba_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jumlah_pembelahan_amoeba_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/jumlah_awal_amoeba_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jumlah_pembelahan_amoeba_inp"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/jumlah_pembelahan_amoeba_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/retang_waktu_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/jumlah_pembelahan_amoeba_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rentang_waktu_inp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textColor="@color/white"
                android:hint="@string/rentang_waktu_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/jangka_waktu_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/retang_waktu_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/jangka_waktu_inp"
                android:layout_width="match_parent"
                android:textColor="@color/white"
                android:layout_height="match_parent"
                android:inputType="number"
                android:hint="@string/jangka_waktu_hint"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textColor="@color/white"
            android:text="@string/reset"
            app:layout_constraintTop_toBottomOf="@id/jangka_waktu_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_hitung"/>

        <Button
            android:id="@+id/btn_hitung"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/hitung"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_reset"
            app:layout_constraintTop_toBottomOf="@id/jangka_waktu_hint" />

        <TextView
            android:id="@+id/hasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/btn_reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="250"/>

        <Button
            android:id="@+id/btn_share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/hasil"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:visibility="invisible"
            android:text="@string/share_hasil"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>